[Plugins] Improve scenario output from boot_runcommand_delete
Scenario VMTasks.boot_runcommand_delete now can populate
report tab "Scenario Data" with any allowed charts.
SSH command return value structure new reflects
Scenario.add_output() arguments.

Also, there is new shell script
samples/tasks/support/instance_test.sh which generates
different load on server and creates proper JSON output.

Old format of command output is also supported but marked
as deprecated.

Change-Id: I6a34b634ea7d9080f9ca08bf0f82d04fa69406d9

--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -677,6 +677,28 @@
         image:
             name: {{image_name}}
         command:
+          script_file: "~/.rally/extra/instance_test.sh"
+          interpreter: "/bin/sh"
+        username: "cirros"
+      runner:
+        type: "constant"
+        times: {{smoke or 4}}
+        concurrency: {{smoke or 2}}
+      context:
+        users:
+          tenants: {{smoke or 2}}
+          users_per_tenant: {{smoke or 2}}
+        network: {}
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: {{image_name}}
+        command:
           script_file: "~/.rally/extra/instance_dd_test.sh"
           interpreter: "/bin/sh"
         username: "cirros"
@@ -689,6 +711,9 @@
           tenants: {{smoke or 2}}
           users_per_tenant: {{smoke or 2}}
         network: {}
+      sla:
+        failure_rate:
+          max: 0
 
   VMTasks.boot_runcommand_delete_custom_image:
     -
