Use pytest instead of testr
- pytest is used by everybody
- pytest works on MacOS and Windows without any issues
- pytest doesn't require bash scripts in and .testrconfig in repo
- pytest has built-in colorizer
- pytest shows out of box slowest test
- pytest shows progress

This patch does 3 things:
1) Remove testr config file & requirments
2) Add pytest requirments
3) Change tox.ini to use pytest instead of testr

To add parameters to py.test you should add -- and than all args.
For example,
  tox -e py27 -- -k "db"

Change-Id: Ide3ddd58a2d1635651fc53404cb5cc7c1c4bab5e

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ install_command = pip install -U {opts} {packages}
 usedevelop = True
 commands =
   find . -type f -name "*.pyc" -delete
-  python setup.py testr --slowest --testr-args='{posargs}'
+  py.test --html=pytest_results.html --durations=10 "tests/unit" {posargs}
 distribute = false
 basepython = python2.7
 passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
@@ -35,7 +35,6 @@ basepython = python3.4
 [testenv:venv]
 commands = {posargs}
 
-
 [testenv:debug]
 commands = oslo_debug_helper -t tests {posargs}
 
@@ -45,7 +44,9 @@ commands = oslo_debug_helper -t tests {posargs}
 
 [testenv:cli]
 sitepackages = True
-commands = {toxinidir}/tests/ci/rally-integrated.sh
+commands =
+  find . -type f -name "*.pyc" -delete
+  py.test --html=pytest_results.html --durations=10 "tests/functional" {posargs}
 
 
 [testenv:cover]
