--- a/rally-jobs/rally-manila.yaml
+++ b/rally-jobs/rally-manila.yaml
@@ -34,6 +34,36 @@
         failure_rate:
           max: 0
 
+  ManilaShares.create_and_delete_share:
+    -
+      args:
+        share_proto: "nfs"
+        size: 1
+        min_sleep: 1
+        max_sleep: 2
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 4
+      context:
+        quotas:
+          manila:
+            shares: -1
+            gigabytes: -1
+            share_networks: -1
+        users:
+          tenants: 2
+          users_per_tenant: 1
+          user_choice_method: "round_robin"
+        network:
+          networks_per_tenant: 2
+          start_cidr: "99.0.0.0/24"
+        manila_share_networks:
+          use_share_networks: True
+      sla:
+        failure_rate:
+          max: 0
+
   ManilaShares.create_share_network_and_delete:
     -
       args:
