--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -1098,3 +1098,23 @@
       sla:
         failure_rate:
           max: 0
+
+  NovaServers.boot_server_from_volume_snapshot:
+    -
+      args:
+        flavor:
+            name: {{flavor_name}}
+        image:
+            name: {{image_name}}
+        volume_size: 1
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
