Fix scenario examples for vm
The command value is wrong in the example files for vm tasks.

Change-Id: I636f8a8552c4e1ad48e6455ea87ade1a62933315
Closes-bug: #1590814

--- a/samples/tasks/scenarios/vm/boot-runcommand-delete.yaml
+++ b/samples/tasks/scenarios/vm/boot-runcommand-delete.yaml
@@ -10,7 +10,8 @@
         floating_network: "public"
         force_delete: false
         command:
-            remote_path: "samples/tasks/support/instance_dd_test.sh"
+            interpreter: "/bin/sh"
+            script_file: "samples/tasks/support/instance_dd_test.sh"
         username: "cirros"
       runner:
         type: "constant"
