--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -127,6 +127,27 @@
         failure_rate:
           max: 0
 
+  NovaServers.boot_and_list_server:
+    -
+      args:
+        flavor:
+            name: {{flavor_name}}
+        image:
+            name: {{image_name}}
+        detailed: True
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+          user_choice_method: "round_robin"
+      sla:
+        failure_rate:
+          max: 0
+
   NovaServers.suspend_and_resume_server:
     -
       args:
@@ -670,6 +691,28 @@
         quotas:
           nova:
             security_groups: -1
+      sla:
+        failure_rate:
+          max: 0
+
+  NovaSecGroup.create_and_list_secgroups:
+    -
+      args:
+        security_group_count: 5
+        rules_per_security_group: 5
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+          user_choice_method: "round_robin"
+        quotas:
+          nova:
+            security_groups: -1
+            security_group_rules: -1
       sla:
         failure_rate:
           max: 0
