--- a/samples/tasks/scenarios/cinder/create-nested-snapshots-and-attach-volume.yaml
+++ b/samples/tasks/scenarios/cinder/create-nested-snapshots-and-attach-volume.yaml
@@ -6,9 +6,7 @@
           size:
               min: 1
               max: 5
-          nested_level:
-              min: 5
-              max: 10
+          nested_level: 5
       runner:
         type: "constant"
         times: 1
