--- a/rally-jobs/rally-neutron-existing-users.yaml
+++ b/rally-jobs/rally-neutron-existing-users.yaml
@@ -14,6 +14,22 @@
         failure_rate:
           max: 20
 
+  NeutronNetworks.create_and_list_subnets:
+    -
+      args:
+        network_create_args:
+        subnet_create_args:
+        subnet_cidr_start: "1.1.0.0/30"
+        subnets_per_network: 2
+      runner:
+        type: "constant"
+        times: {{smoke or 20 }}
+        concurrency: {{smoke or 10}}
+      context:
+        network: {}
+      sla:
+        failure_rate:
+          max: 20
 
   NeutronSecurityGroup.create_and_list_security_groups:
     -
@@ -65,6 +81,130 @@
         failure_rate:
           max: 0
 
+  NeutronNetworks.create_and_list_routers:
+    -
+      args:
+        network_create_args:
+        subnet_create_args:
+        subnet_cidr_start: "1.1.0.0/30"
+        subnets_per_network: 2
+        router_create_args:
+      runner:
+        type: "constant"
+        times: {{smoke or 15}}
+        concurrency: {{smoke or 5}}
+      context:
+        network: {}
+      sla:
+        failure_rate:
+          max: 20
+
+  NeutronNetworks.create_and_list_ports:
+    -
+      args:
+        network_create_args:
+        port_create_args:
+        ports_per_network: 4
+      runner:
+        type: "constant"
+        times: {{smoke or 15}}
+        concurrency: {{smoke or 5}}
+      context:
+        network: {}
+      sla:
+        failure_rate:
+          max: 20
+
+  # TODO(ikhudoshyn): We need to setup 'pool'
+  # quota properly in rally-gate.sh in order to run it
+  #
+  #NeutronLoadbalancerV1.create_and_list_pools:
+    #-
+      #args:
+        #pool_create_args: {}
+      #runner:
+        #type: "constant"
+        #times: {{smoke or 20}}
+        #concurrency: {{smoke or 10}}
+      #context:
+        #network: {}
+        #lbaas:
+          #pool: {}
+          #lbaas_version: 1
+      #sla:
+        #failure_rate:
+          #max: 0
+
+  # TODO(ikhudoshyn): We need to setup 'pool'
+  # quota properly in rally-gate.sh in order to run it
+  #
+  #NeutronLoadbalancerV1.create_and_delete_pools:
+    #-
+      #args:
+        #pool_create_args: {}
+      #runner:
+        #type: "constant"
+        #times: {{smoke or 20}}
+        #concurrency: {{smoke or 10}}
+      #context:
+        #network: {}
+      #sla:
+        #failure_rate:
+          #max: 0
+
+  # TODO(ikhudoshyn): We need to setup 'pool'
+  # quota properly in rally-gate.sh in order to run it
+  #
+  #NeutronLoadbalancerV1.create_and_update_pools:
+    #-
+      #args:
+        #pool_create_args: {}
+        #pool_update_args: {}
+      #runner:
+        #type: "constant"
+        #times: {{smoke or 20}}
+        #concurrency: {{smoke or 10}}
+      #context:
+        #network: {}
+      #sla:
+        #failure_rate:
+          #max: 0
+
+  # TODO(ikhudoshyn): We need to setup 'pool'
+  # quota properly in rally-gate.sh in order to run it
+  #
+  #NeutronLoadbalancerV1.create_and_list_vips:
+    #-
+      #args:
+        #vip_create_args: {}
+      #runner:
+        #type: "constant"
+        #times: {{smoke or 20}}
+        #concurrency: {{smoke or 10}}
+      #context:
+        #network: {}
+      #sla:
+        #failure_rate:
+          #max: 0
+
+  # TODO(ikhudoshyn): We need to setup 'pool'
+  # quota properly in rally-gate.sh in order to run it
+  #
+  #NeutronLoadbalancerV1.create_and_update_vips:
+    #-
+      #args:
+        #vip_create_args: {}
+        #vip_update_args: {}
+        #pool_create_args: {}
+      #runner:
+        #type: "constant"
+        #times: {{smoke or 20}}
+        #concurrency: {{smoke or 10}}
+      #context:
+        #network: {}
+      #sla:
+        #failure_rate:
+          #max: 0
 
   NeutronLoadbalancerV1.create_and_list_healthmonitors:
     -
@@ -119,6 +259,46 @@
         failure_rate:
           max: 20
 
+  NeutronNetworks.create_and_update_subnets:
+    -
+      args:
+        network_create_args: {}
+        subnet_create_args: {}
+        subnet_cidr_start: "1.4.0.0/16"
+        subnets_per_network: 2
+        subnet_update_args:
+            enable_dhcp: False
+            name: "_subnet_updated"
+      runner:
+        type: "constant"
+        times: {{smoke or 20}}
+        concurrency: {{smoke or 10}}
+      context:
+        network: {}
+      sla:
+        failure_rate:
+          max: 20
+
+  NeutronNetworks.create_and_update_routers:
+    -
+      args:
+        network_create_args: {}
+        subnet_create_args: {}
+        subnet_cidr_start: "1.1.0.0/30"
+        subnets_per_network: 2
+        router_create_args: {}
+        router_update_args:
+            admin_state_up: False
+            name: "_router_updated"
+      runner:
+        type: "constant"
+        times: {{smoke or 15}}
+        concurrency: {{smoke or 5}}
+      context:
+        network: {}
+      sla:
+        failure_rate:
+          max: 20
 
   NeutronNetworks.create_and_delete_networks:
     -
@@ -132,6 +312,22 @@
         failure_rate:
           max: 20
 
+  NeutronNetworks.create_and_delete_subnets:
+    -
+      args:
+        network_create_args: {}
+        subnet_create_args: {}
+        subnet_cidr_start: "1.1.0.0/30"
+        subnets_per_network: 2
+      runner:
+        type: "constant"
+        times: {{smoke or 20}}
+        concurrency: {{smoke or 10}}
+      context:
+        network: {}
+      sla:
+        failure_rate:
+          max: 20
 
   NeutronNetworks.create_and_delete_floating_ips:
     -
@@ -146,15 +342,91 @@
         failure_rate:
           max: 0
 
-
-  Quotas.neutron_update:
+  NeutronNetworks.create_and_delete_routers:
     -
       args:
-        max_quota: 1024
+        network_create_args: {}
+        subnet_create_args: {}
+        subnet_cidr_start: "1.1.0.0/30"
+        subnets_per_network: 2
+        router_create_args: {}
       runner:
         type: "constant"
-        times: {{smoke or 10}}
-        concurrency: {{smoke or 2}}
+        times: {{smoke or 15}}
+        concurrency: {{smoke or 5}}
+      context:
+        network: {}
+      sla:
+          failure_rate:
+            max: 20
+
+  NeutronNetworks.create_and_delete_ports:
+    -
+      args:
+        network_create_args: {}
+        port_create_args: {}
+        ports_per_network: 10
+      runner:
+        type: "constant"
+        times: {{smoke or 8}}
+        concurrency: {{smoke or 4}}
+      context:
+        network: {}
+      sla:
+        failure_rate:
+          max: 20
+
+  NeutronNetworks.create_and_update_ports:
+    -
+      args:
+        network_create_args: {}
+        port_create_args: {}
+        ports_per_network: 5
+        port_update_args:
+            admin_state_up: False
+            device_id: "dummy_id"
+            device_owner: "dummy_owner"
+            name: "_port_updated"
+      runner:
+        type: "constant"
+        times: {{smoke or 20}}
+        concurrency: {{smoke or 10}}
+      context:
+        network: {}
+      sla:
+        failure_rate:
+          max: 20
+
+  NovaServers.boot_and_delete_server:
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: {{image_name}}
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      sla:
+        failure_rate:
+          max: 0
+
+    -
+      args:
+        auto_assign_nic: True
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: {{image_name}}
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        network:
+          start_cidr: "10.2.0.0/24"
+          networks_per_tenant: 2
       sla:
         failure_rate:
           max: 0
@@ -184,3 +456,67 @@
       sla:
         failure_rate:
           max: 0
+
+  VMTasks.boot_runcommand_delete:
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: {{image_name}}
+        command:
+          script_file: "~/.rally/extra/instance_test.sh"
+          interpreter: "/bin/sh"
+        username: "cirros"
+      runner:
+        type: "constant"
+        times: {{smoke or 4}}
+        concurrency: {{smoke or 2}}
+      context:
+        network: {}
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: {{image_name}}
+        command:
+          script_file: "~/.rally/extra/instance_dd_test.sh"
+          interpreter: "/bin/sh"
+        username: "cirros"
+      runner:
+        type: "constant"
+        times: {{smoke or 4}}
+        concurrency: {{smoke or 2}}
+      context:
+        network: {}
+      sla:
+        failure_rate:
+          max: 0
+
+  VMTasks.boot_runcommand_delete_custom_image:
+    -
+      args:
+        command:
+          remote_path: "./dd_test.sh"
+        flavor:
+          name: "m1.tiny"
+        username: "cirros"
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        image_command_customizer:
+          command:
+            local_path: "/home/jenkins/.rally/extra/install_benchmark.sh"
+            remote_path: "./install_benchmark.sh"
+          flavor:
+            name: "m1.tiny"
+          image:
+            name: {{image_name}}
+          username: "cirros"
+        network: {}
