[CI] Fix coverage job
Changes:
  * start using pytest-cov library
  * if there are uncommitted changes then do not try to
    stash them automatically but exit with error message

Co-Authored-By: Andrey Kurilin <andr.kurilin@gmail.com>
Co-Authored-By: Alexander Maretskiy <amaretskiy@mirantis.com>

Change-Id: Id5f396550a600fe0ab899b09aceff60b3d98dc0e

--- a/.coveragerc
+++ b/.coveragerc
@@ -6,3 +6,6 @@ source = rally
 ignore_errors = True
 precision = 3
 omit = */migrations/versions/ca3626f62937_init_migration.py
+
+[html]
+directory = cover
