Add keystone validate token using ceilometer scenario
Change-Id: I2d6220f2ac6149e1177d8fc324f4cfd541d41ae3

--- a/rally-jobs/rally-keystone-api-v2.yaml
+++ b/rally-jobs/rally-keystone-api-v2.yaml
@@ -705,6 +705,22 @@
         failure_rate:
           max: 0
 
+  Authenticate.validate_ceilometer:
+    -
+      args:
+        repetitions: 2
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 5
+      sla:
+        failure_rate:
+          max: 0
+
   Authenticate.validate_glance:
     -
       args:
