Add dns_nameservers option to network context
For network with limited connectivity, the default Google's DNS
servers might not be reachable.  Add the ability to provide
dns_nameservers configuration option under network context to
override the default ones in Neutron network.

Change-Id: Ie4043e8465ef5511cb1baed96de67b47ad66a650

--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -623,6 +623,9 @@
         network:
           start_cidr: "10.2.0.0/24"
           networks_per_tenant: 2
+          dns_nameservers:
+            - "8.8.8.8"
+            - "8.8.4.4"
       sla:
         failure_rate:
           max: 0
@@ -740,4 +743,5 @@
         users:
           tenants: 1
           users_per_tenant: 1
-        network: {}
+        network:
+          dns_nameservers: []
