Add param volume_type when creating volume in nova scenarios
Volume_type can specify a certain volume type when there are
multiple backends.

Change-Id: Ifdc80f5bb6c0a05c64f0b0c6b28b536a2e46f714

--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -1,6 +1,7 @@
 {%- set cirros_image_url = "http://download.cirros-cloud.net/0.3.4/cirros-0.3.4-x86_64-disk.img" %}
 {% set image_name = "^(cirros.*uec|TestVM)$" %}
 {% set flavor_name = "m1.tiny" %}
+{% set volume_type = "" %}
 ---
   Authenticate.validate_nova:
     -
@@ -465,6 +466,7 @@
         image:
             name: {{image_name}}
         volume_size: 1
+        volume_type: {{volume_type}}
       runner:
         type: "constant"
         times: 2
@@ -485,6 +487,7 @@
         image:
             name: {{image_name}}
         volume_size: 1
+        volume_type: {{volume_type}}
       runner:
         type: "constant"
         times: 2
@@ -1107,6 +1110,7 @@
         image:
             name: {{image_name}}
         volume_size: 1
+        volume_type: {{volume_type}}
       runner:
         type: "constant"
         times: 2
