--- a/samples/tasks/scenarios/nova/boot-from-volume-and-delete.yaml
+++ b/samples/tasks/scenarios/nova/boot-from-volume-and-delete.yaml
@@ -1,4 +1,5 @@
 {% set flavor_name = flavor_name or "m1.tiny" %}
+{% set volume_type = volume_type or "" %}
 ---
   NovaServers.boot_server_from_volume_and_delete:
     -
@@ -8,6 +9,7 @@
         image:
             name: "^cirros.*uec$"
         volume_size: 10
+        volume_type: "{{volume_type}}"
         force_delete: false
       runner:
         type: "constant"
