--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ python-saharaclient>=0.13.0 # Apache-2.0
 python-troveclient>=2.2.0 # Apache-2.0
 python-zaqarclient>=1.0.0 # Apache-2.0
 python-swiftclient>=2.2.0 # Apache-2.0
+python-watcherclient>=0.23.0 # Apache-2.0
 python-subunit>=0.0.18 # Apache-2.0/BSD
 requests>=2.10.0 # Apache-2.0
 SQLAlchemy<1.1.0,>=1.0.10 # MIT
