Add Python 3.5 classifier and venv
Now that there is a passing gate job, we can claim support for
Python 3.5 in the classifier. This patch also adds the convenience
py35 venv.

Change-Id: Ieca09d7eb44f056aabe36dcf6eab4bf5dbf815eb

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 1.6
 skipsdist = True
-envlist = py34,py27,pep8
+envlist = py35,py34,py27,pep8
 
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
@@ -32,6 +32,10 @@ distribute = false
 basepython = python3.4
 
 
+[testenv:py35]
+basepython = python3.5
+
+
 [testenv:venv]
 commands = {posargs}
 
@@ -40,6 +44,10 @@ commands = oslo_debug_helper -t tests {posargs}
 
 [testenv:debug34]
 basepython = python3.4
+commands = oslo_debug_helper -t tests {posargs}
+
+[testenv:debug35]
+basepython = python3.5
 commands = oslo_debug_helper -t tests {posargs}
 
 [testenv:cli]
