Add watcher audit template context and 2 scenarios
This patch set adds audit template context with two scenarios:
list_audit_templates
create_audit_and_delete

Change-Id: I2d3adef7893fbef1b90e69f56818fbe4d3ce4366

--- a/etc/rally/rally.conf.sample
+++ b/etc/rally/rally.conf.sample
@@ -509,6 +509,11 @@
 # Time to wait for a VM to become pingable (floating point value)
 #vm_ping_timeout = 120.0
 
+# Watcher audit launch interval (floating point value)
+#watcher_audit_launch_poll_interval = 2.0
+
+# Watcher audit launch timeout (integer value)
+#watcher_audit_launch_timeout = 300
 
 [cleanup]
 
