--- a/tox.ini
+++ b/tox.ini
@@ -63,6 +63,10 @@ commands =
 commands =
     oslo-config-generator --config-file etc/rally/rally-config-generator.conf
 
+[testenv:requirements]
+deps = requests[security]
+commands = python {toxinidir}/tests/ci/sync_requirements.py {posargs}
+
 [flake8]
 ignore = H703
 show-source = true
