--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,44 @@
 # The order of packages is significant, because pip processes them in the order
 # of appearance. Changing the order has an impact on the overall integration
 # process, which may cause wedges in the gate later.
-alembic>=0.8.4                                         # MIT
-boto>=2.32.1                                           # MIT
-decorator>=3.4.0                                       # new BSD License
-Jinja2>=2.8                                            # BSD
+alembic>=0.8.4,<=0.8.6                                 # MIT
+boto>=2.32.1,<=2.42.0                                  # MIT
+decorator>=3.4.0,<=4.0.10                              # new BSD License
+Jinja2>=2.8,<=2.8                                      # BSD
 # [constant-upper-limit]
 jsonschema!=2.5.0,>=2.0.0,<3.0.0                       # MIT
-netaddr!=0.7.16,>=0.7.12                               # BSD
-oslo.config>=3.10.0                                    # Apache Software License
-oslo.db>=4.1.0                                         # Apache Software License
-oslo.i18n>=2.1.0                                       # Apache Software License
-oslo.log>=1.14.0                                       # Apache Software License
-oslo.serialization>=1.10.0                             # Apache Software License
-oslo.utils>=3.11.0                                     # Apache Software License
-paramiko>=2.0                                          # LGPL
-pbr>=1.6                                               # Apache Software License
+netaddr!=0.7.16,>=0.7.12,<=0.7.18                      # BSD
+oslo.config>=3.12.0,<=3.13.0                           # Apache Software License
+oslo.db>=4.1.0,<=4.8.0                                 # Apache Software License
+oslo.i18n>=2.1.0,<=3.8.0                               # Apache Software License
+oslo.log>=1.14.0,<=3.12.0                              # Apache Software License
+oslo.serialization>=1.10.0,<=2.11.0                    # Apache Software License
+oslo.utils>=3.15.0,<=3.16.0                            # Apache Software License
+paramiko>=2.0,<=2.0.1                                  # LGPL
+pbr>=1.6,<=1.10.0                                      # Apache Software License
 # [constant-upper-limit]
 PrettyTable>=0.7,<0.8                                  # BSD
-PyYAML>=3.1.0                                          # MIT
-python-designateclient>=1.5.0                          # Apache License, Version 2.0
-python-glanceclient>=2.0.0                             # Apache License, Version 2.0
-python-keystoneclient!=1.8.0,!=2.1.0,>=1.7.0           # Apache Software License
-keystoneauth1>=2.1.0                                   # Apache Software License
-python-novaclient!=2.33.0,>=2.29.0                     # Apache License, Version 2.0
-python-neutronclient>=4.2.0                            # Apache Software License
-python-cinderclient!=1.7.0,!=1.7.1,>=1.6.0             # Apache Software License
-python-manilaclient>=1.3.0                             # Apache Software License
-python-heatclient>=1.1.0                               # Apache Software License
-python-ceilometerclient>=2.2.1                         # Apache Software License
-python-ironicclient>=1.1.0                             # Apache Software License
-python-saharaclient>=0.13.0                            # Apache License, Version 2.0
-python-troveclient>=2.2.0                              # Apache Software License
-python-zaqarclient>=1.0.0                              # Apache Software License
-python-swiftclient>=2.2.0                              # Apache Software License
-python-watcherclient>=0.23.0                           # Apache Software License
-python-subunit>=0.0.18
-requests>=2.10.0                                       # Apache License, Version 2.0
+PyYAML>=3.1.0,<=3.11                                   # MIT
+python-designateclient>=1.5.0,<=2.2.0                  # Apache License, Version 2.0
+python-glanceclient>=2.0.0,<=2.2.0                     # Apache License, Version 2.0
+python-keystoneclient!=1.8.0,!=2.1.0,>=1.7.0,<=3.2.0   # Apache Software License
+keystoneauth1>=2.7.0,<=2.9.0                           # Apache Software License
+python-novaclient!=2.33.0,>=2.29.0,<=5.0.0             # Apache License, Version 2.0
+python-neutronclient>=4.2.0,<=4.2.0                    # Apache Software License
+python-cinderclient!=1.7.0,!=1.7.1,>=1.6.0,<=1.8.0     # Apache Software License
+python-manilaclient>=1.10.0,<=1.10.0                   # Apache Software License
+python-heatclient>=1.1.0,<=1.3.0                       # Apache Software License
+python-ceilometerclient>=2.2.1,<=2.4.0                 # Apache Software License
+python-ironicclient>=1.1.0,<=1.5.0                     # Apache Software License
+python-saharaclient>=0.13.0,<=0.15.0                   # Apache License, Version 2.0
+python-troveclient>=2.2.0,<=2.3.0                      # Apache Software License
+python-zaqarclient>=1.0.0,<=1.1.0                      # Apache Software License
+python-swiftclient>=2.2.0,<=3.0.0                      # Apache Software License
+python-watcherclient>=0.23.0,<=0.24.0                  # Apache Software License
+python-subunit>=0.0.18,<=1.2.0
+requests>=2.10.0,<=2.10.0                              # Apache License, Version 2.0
 # [constant-upper-limit]
 SQLAlchemy>=1.0.10,<1.1.0                              # MIT
 # [constant-upper-limit]
-sphinx!=1.2.0,!=1.3b1,>=1.1.2,<1.3                     # BSD
-six>=1.9.0                                             # MIT
+sphinx!=1.3b1,>=1.2.1,<1.3                             # BSD
+six>=1.9.0,<=1.10.0                                    # MIT
