Add performance degradation SLA plugin
This adds SLA plugin that finds minimum and maximum duration of
iterations completed without errors during Rally task execution.
Assuming that minimum duration is 100%, it calculates
performance degradation against maximum duration.

Example config:
  sla:
    performance_degradation:
      max_degradation: 75

Spec: sla_pd_plugin
Change-Id: Ieedba7be72364f5599a3c0cf79f5f494a7391ea0

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -404,6 +404,8 @@
           max: 1
           min_iterations: 10
           sigmas: 10
+        performance_degradation:
+          max_degradation: 50
 
     -
       args:
