launch tests in parallel
Change-Id: Ia1a228672e33c997baf3c234c1bc3c1f9a336d31

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ install_command = pip install -U {opts} {packages}
 usedevelop = True
 commands =
   find . -type f -name "*.pyc" -delete
-  py.test --html=pytest_results.html --durations=10 "tests/unit" {posargs}
+  py.test --html=pytest_results.html --durations=10 -n auto "tests/unit" {posargs}
 distribute = false
 basepython = python2.7
 passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
@@ -46,7 +46,7 @@ commands = oslo_debug_helper -t tests {posargs}
 sitepackages = True
 commands =
   find . -type f -name "*.pyc" -delete
-  py.test --html=pytest_results.html --durations=10 "tests/functional" {posargs}
+  py.test --html=pytest_results.html --durations=10 -n auto "tests/functional" {posargs}
 
 
 [testenv:cover]
