nested_level should be a number
Change-Id: I54a636266409e91170ea00a06151f5d02e772dde

--- a/certification/openstack/scenario/cinder.yaml
+++ b/certification/openstack/scenario/cinder.yaml
@@ -162,9 +162,7 @@
   CinderVolumes.create_nested_snapshots_and_attach_volume:
     -
       args:
-        nested_level:
-          max: 1
-          min: 1
+        nested_level: 1
         size:
           max: 1
           min: 1
