--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,12 @@ Jinja2>=2.8                                            # BSD
 # [constant-upper-limit]
 jsonschema!=2.5.0,>=2.0.0,<3.0.0                       # MIT
 netaddr!=0.7.16,>=0.7.12                               # BSD
-oslo.config>=3.12.0                                    # Apache Software License
+oslo.config>=3.14.0                                    # Apache Software License
 oslo.db>=4.1.0                                         # Apache Software License
 oslo.i18n>=2.1.0                                       # Apache Software License
 oslo.log>=1.14.0                                       # Apache Software License
 oslo.serialization>=1.10.0                             # Apache Software License
-oslo.utils>=3.15.0                                     # Apache Software License
+oslo.utils>=3.16.0                                     # Apache Software License
 paramiko>=2.0                                          # LGPL
 pbr>=1.6                                               # Apache Software License
 # [constant-upper-limit]
@@ -21,17 +21,17 @@ PrettyTable>=0.7,<0.8                                  # BSD
 PyYAML>=3.1.0                                          # MIT
 python-designateclient>=1.5.0                          # Apache License, Version 2.0
 python-glanceclient>=2.0.0                             # Apache License, Version 2.0
-python-keystoneclient!=1.8.0,!=2.1.0,>=1.7.0           # Apache Software License
-keystoneauth1>=2.7.0                                   # Apache Software License
+python-keystoneclient!=2.1.0,>=2.0.0                   # Apache Software License
+keystoneauth1>=2.10.0                                  # Apache Software License
 python-novaclient!=2.33.0,>=2.29.0                     # Apache License, Version 2.0
 python-neutronclient>=4.2.0                            # Apache Software License
 python-cinderclient!=1.7.0,!=1.7.1,>=1.6.0             # Apache Software License
 python-manilaclient>=1.10.0                            # Apache Software License
-python-monascaclient>=1.2.0                            # Apache Software License
+python-monascaclient>=1.1.0                            # Apache Software License
 python-heatclient>=1.1.0                               # Apache Software License
-python-ceilometerclient>=2.2.1                         # Apache Software License
-python-ironicclient>=1.1.0                             # Apache Software License
-python-saharaclient>=0.13.0                            # Apache License, Version 2.0
+python-ceilometerclient>=2.5.0                         # Apache Software License
+python-ironicclient>=1.6.0                             # Apache Software License
+python-saharaclient>=0.16.0                            # Apache License, Version 2.0
 python-troveclient>=2.2.0                              # Apache Software License
 python-zaqarclient>=1.0.0                              # Apache Software License
 python-swiftclient>=2.2.0                              # Apache Software License
