[senlin]Add context support for Senlin profile
This patch adds context support for Senlin profile. The
following changes were made:
 - Adding Senlin profile context;
 - Revising 'create_and_delete_profile_cluster' scenario
   to make it benchmark cluster creating/deleting only;
 - Revising rally-senlin test job and example jobs accordingly;
 - Minor fix SenlinMixin cleanup resource to make id
   query work correctly;
 - Removing admin requirement from profile util functions
   since profile creating/deleting doesn't need admin role.

Partial-bp: add-support-for-clustering-service-senlin
Change-Id: Ib74803d13f4f89152af3a1ff5e7b6ff9fbac2906

--- a/rally-jobs/rally-senlin.yaml
+++ b/rally-jobs/rally-senlin.yaml
@@ -1,16 +1,7 @@
 ---
-  SenlinClusters.create_and_delete_profile_cluster:
+  SenlinClusters.create_and_delete_cluster:
     -
       args:
-        profile_spec:
-          type: os.nova.server
-          version: 1.0
-          properties:
-            name: cirros_server
-            flavor: 1
-            image: "cirros-0.3.4-x86_64-uec"
-            networks:
-              - network: private
         desired_capacity: 3
         min_size: 0
         max_size: 5
@@ -22,6 +13,15 @@
         users:
           tenants: 2
           users_per_tenant: 2
+        profiles:
+          type: os.nova.server
+          version: "1.0"
+          properties:
+            name: cirros_server
+            flavor: 1
+            image: "cirros-0.3.4-x86_64-uec"
+            networks:
+              - network: private
       sla:
         failure_rate:
           max: 0
