Skip checking samples in coverage job
TaskSampleTestCase is not quick stuff. Tests from this testcase tests
yaml/json files which are not relate to tests coverage of Rally code.
Also, coverage job launchs this slow testcase twice.
Let's use environment variable to identify job name and skip whole test
case in case of coverage job.

PS: coverage is not change in comparison with previous commit, where
    TaskSampleTestCase is launched. It is one more proof that this testcase
    doesn't have any unique calls to rally code.

Change-Id: If0925bc37198092f5d9efadb6591ced25d75212c

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ setenv = VIRTUAL_ENV={envdir}
          LANGUAGE=en_US:en
          LC_ALL=C
          PYTHONHASHSEED=0
+         TOX_ENV_NAME={envname}
 whitelist_externals = find
                       rm
                       make
