--- a/rally-jobs/rally-mistral.yaml
+++ b/rally-jobs/rally-mistral.yaml
@@ -44,3 +44,35 @@
       sla:
         failure_rate:
           max: 0
+
+  MistralExecutions.list_executions:
+    -
+      runner:
+        type: "constant"
+        times: 50
+        concurrency: 10
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
+  MistralExecutions.create_execution_from_workbook:
+    -
+      args:
+        definition: "~/.rally/extra/mistral_wb.yaml"
+        workflow_name: "wf1"
+        do_delete: true
+      runner:
+        type: "constant"
+        times: 50
+        concurrency: 10
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
