--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ install_command = pip install -U {opts} {packages}
 usedevelop = True
 commands =
   find . -type f -name "*.pyc" -delete
-  py.test --html=pytest_results.html --durations=10 -n auto "tests/unit" {posargs}
+  py.test --html=.test_results/pytest_results.html --durations=10 -n auto "tests/unit" {posargs}
 distribute = false
 basepython = python2.7
 passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
