--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ install_command = pip install -U {opts} {packages}
 usedevelop = True
 commands =
   find . -type f -name "*.pyc" -delete
-  py.test --html=.test_results/pytest_results.html --durations=10 -n auto "tests/unit" {posargs}
+  python {toxinidir}/tests/ci/pytest_launcher.py tests/unit --posargs={posargs}
 distribute = false
 basepython = python2.7
 passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
@@ -55,8 +55,7 @@ commands = oslo_debug_helper -t tests {posargs}
 sitepackages = True
 commands =
   find . -type f -name "*.pyc" -delete
-  py.test --html=pytest_results.html --durations=10 -n auto "tests/functional" {posargs}
-
+  python {toxinidir}/tests/ci/pytest_launcher.py "tests/functional" --posargs={posargs}
 
 [testenv:cover]
 commands = {toxinidir}/tests/ci/cover.sh {posargs}
