Add Keystone token validation
Added Keystone benchmarking scenario to perform token validation.

Change-Id: Ie84f99156c7537a2a4630e9b0778009e7121ef86

--- a/rally-jobs/rally-keystone-api-v2.yaml
+++ b/rally-jobs/rally-keystone-api-v2.yaml
@@ -22,6 +22,17 @@
         failure_rate:
           max: 0
 
+  KeystoneBasic.authenticate_user_and_validate_token:
+    -
+      args: {}
+      runner:
+        type: "constant"
+        times: 20
+        concurrency: 5
+      sla:
+        failure_rate:
+          max: 0
+
   KeystoneBasic.create_user_set_enabled_and_delete:
     -
       args:
