--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -1136,3 +1136,19 @@
       sla:
         failure_rate:
           max: 0
+
+  NovaAggregates.create_and_list_aggregates:
+    -
+      args:
+        availability_zone: "nova"
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
