--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -247,6 +247,26 @@
         failure_rate:
           max: 0
 
+  NovaServers.boot_server_associate_and_dissociate_floating_ip:
+    -
+      args:
+        flavor:
+          name: {{flavor_name}}
+        image:
+          name: {{image_name}}
+      runner:
+        type: "constant"
+        times: 5
+        concurrency: 2
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+        network: {}
+      sla:
+        failure_rate:
+          max: 0
+
   NovaServers.list_servers:
     -
       args:
