--- a/samples/tasks/scenarios/magnum/list-cluster-templates.yaml
+++ b/samples/tasks/scenarios/magnum/list-cluster-templates.yaml
@@ -1,5 +1,5 @@
 ---
-  MagnumBaymodels.list_baymodels:
+  MagnumClusterTemplates.list_cluster_templates:
     -
       runner:
         type: "constant"
@@ -9,7 +9,7 @@
         users:
           tenants: 1
           users_per_tenant: 1
-        baymodels:
+        cluster_templates:
           image_id: "fedora-atomic-latest"
           external_network_id: "public"
           dns_nameserver: "8.8.8.8"
@@ -26,7 +26,7 @@
         users:
           tenants: 1
           users_per_tenant: 1
-        baymodels:
+        cluster_templates:
           image_id: "fedora-atomic-latest"
           external_network_id: "public"
           dns_nameserver: "8.8.8.8"
@@ -43,7 +43,7 @@
         users:
           tenants: 1
           users_per_tenant: 1
-        baymodels:
+        cluster_templates:
           image_id: "ubuntu-mesos"
           external_network_id: "public"
           dns_nameserver: "8.8.8.8"
