--- a/samples/tasks/scenarios/magnum/list-clusters.yaml
+++ b/samples/tasks/scenarios/magnum/list-clusters.yaml
@@ -1,8 +1,6 @@
 ---
-  MagnumBays.create_and_list_bays:
+  MagnumClusters.list_clusters:
     -
-      args:
-        node_count: 1
       runner:
         type: "constant"
         times: 1
@@ -11,7 +9,7 @@
         users:
           tenants: 1
           users_per_tenant: 1
-        baymodels:
+        cluster_templates:
           image_id: "fedora-atomic-latest"
           external_network_id: "public"
           dns_nameserver: "8.8.8.8"
@@ -19,9 +17,9 @@
           docker_volume_size: 5
           network_driver: "flannel"
           coe: "kubernetes"
+        clusters:
+          node_count: 2
     -
-      args:
-        node_count: 1
       runner:
         type: "constant"
         times: 1
@@ -30,7 +28,7 @@
         users:
           tenants: 1
           users_per_tenant: 1
-        baymodels:
+        cluster_templates:
           image_id: "fedora-atomic-latest"
           external_network_id: "public"
           dns_nameserver: "8.8.8.8"
@@ -38,9 +36,9 @@
           docker_volume_size: 5
           network_driver: "docker"
           coe: "swarm"
+        clusters:
+          node_count: 2
     -
-      args:
-        node_count: 1
       runner:
         type: "constant"
         times: 1
@@ -49,10 +47,12 @@
         users:
           tenants: 1
           users_per_tenant: 1
-        baymodels:
+        cluster_templates:
           image_id: "ubuntu-mesos"
           external_network_id: "public"
           dns_nameserver: "8.8.8.8"
           flavor_id: "m1.small"
           network_driver: "docker"
           coe: "mesos"
+        clusters:
+          node_count: 2
