--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -561,20 +561,36 @@
 
     -
       args:
-        sleep: 0.25
+        sleep: 0.75
       runner:
         type: "constant"
-        times: 10
+        times: 20
         concurrency: 2
       hooks:
         - name: sys_call
-          description: test hook
-          args: /bin/true
+          description: Run script
+          args: sh /home/jenkins/.rally/extra/hook_example_script.sh
           trigger:
             name: event
             args:
               unit: iteration
-              at: [2, 4, 6, 8, 10]
+              at: [2, 5, 8, 13, 17]
+        - name: sys_call
+          description: Show time
+          args: date +%Y-%m-%dT%H:%M:%S
+          trigger:
+            name: event
+            args:
+              unit: time
+              at: [0, 2, 5, 6, 9]
+        - name: sys_call
+          description: Show system name
+          args: uname -a
+          trigger:
+            name: event
+            args:
+              unit: iteration
+              at: [2, 3, 4, 5, 6, 8, 10, 12, 13, 15, 17, 18]
       sla:
         failure_rate:
           max: 0
@@ -610,8 +626,8 @@
         concurrency: 1
       hooks:
         - name: sys_call
-          description: test hook
-          args: /bin/true
+          description: Get system name
+          args: uname -a
           trigger:
             name: event
             args:
