--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -35,6 +35,20 @@
         failure_rate:
           max: 0
 
+  Quotas.nova_get:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   Quotas.nova_update:
     -
       args:
