--- a/rally-jobs/rally-keystone-api-v2.yaml
+++ b/rally-jobs/rally-keystone-api-v2.yaml
@@ -1073,3 +1073,17 @@
       sla:
         failure_rate:
           max: 0
+
+  KeystoneBasic.create_and_list_roles:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
