--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -138,6 +138,20 @@
         failure_rate:
           max: 0
 
+  KeystoneBasic.create_and_list_roles:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 2
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   KeystoneBasic.create_and_list_users:
     -
       args: {}
