--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -109,6 +109,21 @@
         failure_rate:
           max: 0
 
+  KeystoneBasic.create_and_get_role:
+    -
+      args: {}
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   #KeystoneBasic.create_add_and_list_user_roles:
     #-
       #runner:
