--- a/tox.ini
+++ b/tox.ini
@@ -55,7 +55,7 @@ commands = oslo_debug_helper -t tests {posargs}
 sitepackages = True
 commands =
   find . -type f -name "*.pyc" -delete
-  python {toxinidir}/tests/ci/pytest_launcher.py "tests/functional" --posargs={posargs}
+  python {toxinidir}/tests/ci/pytest_launcher.py "tests/functional" --timeout -1 --posargs={posargs}
 
 [testenv:cover]
 commands = {toxinidir}/tests/ci/cover.sh {posargs}
