Pin pycparser version to ==2.13
This should fix  AssertionError: sorry, but this version only
supports 100 named groups during requirements install via pip

Change-Id: I2fd06f39066007ac5496a11eb048f97446a3aaf6

--- a/requirements.txt
+++ b/requirements.txt
@@ -49,3 +49,4 @@ python-swiftclient>=2.2.0                              # Apache Software License
 python-troveclient>=2.2.0                              # Apache Software License
 python-watcherclient>=0.23.0                           # Apache Software License
 python-zaqarclient>=1.0.0                              # Apache Software License
+pycparser==2.13  # BSD  # Version pinned to avoid AssertionError: sorry, but this version only supports 100 named groups
