[Plugins] Replace instance_dd_test.sh with instance_test.sh
Legacy script instance_dd_test.sh (loads nova instance
in vm scenarios) is replaced with new instance_test.sh,
which does same job better and outputs detailed data
for HTML report.

Legacy script instance_dd_test.sh is removed.

Change-Id: Iafe51b5f559e01a972a187dad9e2608f7efa8022

--- a/samples/tasks/scenarios/vm/boot-runcommand-delete-custom-image.yaml
+++ b/samples/tasks/scenarios/vm/boot-runcommand-delete-custom-image.yaml
@@ -3,7 +3,7 @@
     -
       args:
         command:
-          remote_path: "./instance_dd_test.sh"
+          remote_path: "./instance_test.sh"
         flavor:
           name: m1.small
         userdata: "#cloud-config\ndisable_root: 0\nssh_pwauth: 1"
