Use upper-constraints for tox envs
Pin tox environments to upper-constraints to avoid conflicts with
library releases.

Change-Id: I61153f429de24de9024d3642ca96b07a7bf9bcbd
Closes-Bug:#1628597

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ whitelist_externals = find
                       make
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-install_command = pip install -U {opts} {packages}
+install_command = pip install -c https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt -U {opts} {packages}
 usedevelop = True
 commands =
   find . -type f -name "*.pyc" -delete
