--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -709,6 +709,22 @@
         failure_rate:
           max: 0
 
+  NovaHypervisors.list_and_search_hypervisors:
+    -
+      args:
+        detailed: True
+      runner:
+        type: "constant"
+        times: 5
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   NovaImages.list_images:
     -
       args:
