--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -5,7 +5,7 @@
   NeutronNetworks.create_and_list_networks:
     -
       args:
-        network_create_args:
+        network_create_args: {}
       runner:
         type: "constant"
         times: {{smoke or 40}}
@@ -17,6 +17,26 @@
         quotas:
           neutron:
              network: -1
+      sla:
+        failure_rate:
+          max: 20
+    -
+      args:
+        network_create_args:
+          provider:network_type: "vxlan"
+      runner:
+        type: "constant"
+        times: {{smoke or 40}}
+        concurrency: {{smoke or 20}}
+      context:
+        users:
+          tenants: {{smoke or 3}}
+          users_per_tenant: {{smoke or 2}}
+        quotas:
+          neutron:
+             network: -1
+        roles:
+          - "admin"
       sla:
         failure_rate:
           max: 20
