--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -801,6 +801,26 @@
         failure_rate:
           max: 0
 
+  CinderVolumeTypes.create_volume_type_and_encryption_type:
+    -
+      args:
+        specs:
+          provider: "LuksEncryptor"
+          cipher: "aes-xts-plain64"
+          key_size: 512
+          control_location: "front-end"
+      runner:
+        type: "constant"
+        times: 5
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   CinderVolumes.list_transfers:
     -
       args:
