--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -679,6 +679,22 @@
         failure_rate:
           max: 0
 
+  NovaHypervisors.list_and_get_uptime_hypervisors:
+    -
+      args:
+        detailed: True
+      runner:
+        type: "constant"
+        times: 5
+        concurrency: 2
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   NovaImages.list_images:
     -
       args:
