--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -662,6 +662,20 @@
         failure_rate:
           max: 0
 
+  NovaHypervisors.statistics_hypervisors:
+    -
+      args: {}
+      runner:
+        type: "constant"
+        times: 5
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
 
   NovaHypervisors.list_and_get_hypervisors:
     -
