Add cinder.CreateIncrementalVolumeBackup scenario
The scenario first create a volume, the create a backup, the
backup is full backup. Because Incremental backup must be based on the
full backup. finally create a incremental backup.

Change-Id: Ia9471020a0f7009288949196bd2603a4b56e7c4a

--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -684,6 +684,24 @@
         failure_rate:
           max: 0
 
+  CinderVolumeBackups.create_incremental_volume_backup:
+    -
+      args:
+        size: 1
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+        roles:
+          - "admin"
+      sla:
+        failure_rate:
+          max: 40
+
   CinderVolumes.create_and_restore_volume_backup:
     -
       args:
