Add nova.ListAndGetHosts scenario
List all nova hosts,and get detailed information
Measure the "nova host-describe" command performance.

Change-Id: I10d4b9a4f118f671c6eb91a67b178ecdf08b8a54

--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -1171,6 +1171,21 @@
         failure_rate:
           max: 0
 
+  NovaHosts.list_and_get_hosts:
+    -
+      args: {}
+      runner:
+        type: "constant"
+        concurrency: 2
+        times: 5
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   NovaServices.list_services:
     -
       runner:
