Benchmark for generate_random_name
This patch adds scenario that runs generate_random_name
in atomic and shows performance of this method.

Change-Id: Iff2445f2d5c295a06bd2e72874280ecb1c4280f2

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -794,6 +794,38 @@
         failure_rate:
           max: 0
 
+  RallyProfile.generate_names_in_atomic:
+    -
+      args:
+        number_of_names: 100
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        number_of_names: 1000
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        number_of_names: 10000
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      sla:
+        failure_rate:
+          max: 0
+
   CeilometerStats.get_stats:
    -
      runner:
