[Manila] Fix CI job configuration
After disabling all OpenStack services [1] for manila/rally CI jobs,
we need to remove every usage of context that is related to disabled
projects. In current case, creation of Neutron networks became
redundant. So, remove it from scenarios.

Also, use proper predefined share types for each type of a job.

[1] I753a648349f7a3b8ede3ee714657638f4db68ec5

Depends-On: I7278a897bb89f0562e1eda449b725d965cb10566
Change-Id: I160740c7674e6ee79daea6e840acd6e3a47d8a75

--- a/rally-jobs/rally-manila-no-ss.yaml
+++ b/rally-jobs/rally-manila-no-ss.yaml
@@ -39,6 +39,7 @@
       args:
         share_proto: "nfs"
         size: 1
+        share_type: "dhss_false"
         min_sleep: 1
         max_sleep: 2
       runner:
