--- a/rally-jobs/rally-manila.yaml
+++ b/rally-jobs/rally-manila.yaml
@@ -40,6 +40,7 @@
       args:
         share_proto: "nfs"
         size: 1
+        share_type: "dhss_true"
         min_sleep: 1
         max_sleep: 2
       runner:
@@ -56,9 +57,6 @@
           tenants: 2
           users_per_tenant: 1
           user_choice_method: "round_robin"
-        network:
-          networks_per_tenant: 2
-          start_cidr: "99.0.0.0/24"
         manila_share_networks:
           use_share_networks: True
       sla:
